--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -3,7 +3,7 @@ body {
 	}
 .page-content {
 	width: 100%;
-	height: 100vh;
+	height: auto;
 	margin:  0 auto;
 	background: #75e2e9;
 	display: flex;
